--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,42 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    apply from: "config.gradle"
+    apply from: "version.gradle"
     repositories {
         google()
         jcenter()
-        
+        jcenter()
+
+        maven {
+            url 'https://jitpack.io'
+        }
+        maven {
+            url uri('./repo')
+        }
+        google()
+        maven {url 'http://developer.huawei.com/repo/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath rootProject.ext.dependencies.kotlin_plugin
     }
 }
 
 allprojects {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
-        
+        maven {
+            url 'https://jitpack.io'
+        }
+        jcenter()
+        google()
+
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+
     }
 }
 
