--- a/version.gradle
+++ b/version.gradle
@@ -16,36 +16,30 @@ ext {
             mavenUploadVersionName = '1.3.3-SNAPSHOT'
     ]
     versions = [
-            support         : '28.0.0',
             module          : '1.3.3',
             okhttp          : '3.4.1',
             retrofit        : '2.2.0',
             lifecycleVersion: "1.1.1",
             kotlin_version  : '1.3.31',
-            glide           : '4.9.0'
+            glide           : '4.9.0',
     ]
 
     dependencies = [
+            appcompact_androidx         : 'androidx.appcompat:appcompat:1.1.0',
+            core_androidx               : 'androidx.core:core-ktx:1.2.0',
+            constraintlayout_androidx   : 'androidx.constraintlayout:constraintlayout:1.1.3',
+
             "multidex"                  : "com.android.support:multidex:1.0.0",
 
             "kotlin_stdlib"             : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin_version}",
             "kotlin_plugin"             : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}",
 
 
-            "support-v4"                : "com.android.support:support-v4:${versions.support}",
-            "appcompatV7"               : "com.android.support:appcompat-v7:${versions.support}",
-            "design"                    : "com.android.support:design:${versions.support}",
-            "cardview_v7"               : "com.android.support:cardview-v7:${versions.support}",
-            "recyclerview_v7"           : "com.android.support:recyclerview-v7:${versions.support}",
-            "support-annotations"       : "com.android.support:support-annotations:${versions.support}",
-            "constraintLayout"          : "com.android.support.constraint:constraint-layout:1.1.3",
 
             "junit"                     : 'junit:junit:4.12',
-            "support_test_runner"       : 'com.android.support.test:runner:1.0.2',
-            "support_test_rules"        : 'com.android.support.test:rules:0.4.1',
+            "support_test_runner"       : 'androidx.test:runner:1.2.0',
             //自动化测试
-            "espresso_core"             : "com.android.support.test.espresso:espresso-core:2.2.2",
-            "espresso_contrib"          : "com.android.support.test.espresso:espresso-contrib:2.2.2",
+            "espresso_core"             : "androidx.test.espresso:espresso-core:3.2.0",
 
 
 
@@ -58,10 +52,6 @@ ext {
 
             "gson"                      : "com.google.code.gson:gson:2.6.2",
 
-            "apache_collections"        : "org.apache.commons:commons-collections4:4.1",
-            "commons-lang"              : "org.apache.commons:commons-lang3:3.1",
-            "commons-io"                : "commons-io:commons-io:2.4",
-
             "retrofit"                  : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
             "retrofit-converter-gson"   : "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
             "retrofit-adapter-rxjava"   : "com.squareup.retrofit2:adapter-rxjava:${versions.retrofit}",
@@ -71,11 +61,6 @@ ext {
             "okhttp-logging-interceptor": "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
             "orhanobut-logger"          : "com.github.orhanobut:logger:1.12",
 
-
-            //汉字转拼音库
-            "tinypinyin"                : "com.github.promeg:tinypinyin:2.0.3",
-            //敏感词过滤库
-            "ahocorasick"               : "org.ahocorasick:ahocorasick:0.3.1",
 
             //图片库glide
             "glide"                     : "com.github.bumptech.glide:glide:${versions.glide}",
