--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bee.wanandroidkotlin">
+    <!-- 用于访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".WanAndroidKotlinApplication"
@@ -11,8 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/activity_style"
         tools:ignore="GoogleAppIndexingWarning">
+
         <activity
             android:name=".ui.SplashActivity"
+            android:theme="@style/AppTheme.Launcher"
             android:configChanges="keyboard|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -27,6 +31,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.LoginActivity"
+            android:configChanges="keyboard|screenSize|orientation|layoutDirection"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.RegisterActivity"
             android:configChanges="keyboard|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait" />
     </application>
