--- a/version.gradle
+++ b/version.gradle
@@ -28,7 +28,9 @@ ext {
     ]
 
     dependencies = [
+            lifecycle_extensions        : 'androidx.lifecycle:lifecycle-extensions:2.2.0',
             appcompact_androidx         : 'androidx.appcompat:appcompat:1.1.0',
+            refresh_androidx            : 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0',
             core_androidx               : 'androidx.core:core-ktx:1.2.0',
             constraintlayout_androidx   : 'androidx.constraintlayout:constraintlayout:1.1.3',
             android_material            : 'com.google.android.material:material:1.1.0',
@@ -45,7 +47,6 @@ ext {
             "support_test_runner"       : 'androidx.test:runner:1.2.0',
             //自动化测试
             "espresso_core"             : "androidx.test.espresso:espresso-core:3.2.0",
-
 
 
 //            LifeExtensions              : "android.arch.lifecycle:extensions:$versions.lifecycleVersion",
