--- a/version.gradle
+++ b/version.gradle
@@ -69,12 +69,15 @@ ext {
             "okhttp"                    : "com.squareup.okhttp3:okhttp:${versions.okhttp}",
             "okhttp_logging_interceptor": "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}",
 
+            //流式布局
+            "flowlayout"                : "com.hyman:flowlayout-lib:1.1.2",
 
             //图片库glide
             "glide"                     : "com.github.bumptech.glide:glide:${versions.glide}",
             "glideAnnotation"           : "com.github.bumptech.glide:compiler:${versions.glide}",
 
     ]
+
 
 
 }
