--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
 
     api rootProject.ext.dependencies.flowlayout
     api rootProject.ext.dependencies.bugly
+
+    debugImplementation rootProject.ext.dependencies.leakcanaryDebug
 }
