--- a/version.gradle
+++ b/version.gradle
@@ -25,6 +25,7 @@ ext {
             kotlin_version                               : '1.3.31',
             glide                                        : '4.9.0',
             rxjava                                       : '3.0.0',
+            leakcanary                                   : '2.2',
     ]
 
     dependencies = [
@@ -78,6 +79,8 @@ ext {
             "glide"                     : "com.github.bumptech.glide:glide:${versions.glide}",
             "glideAnnotation"           : "com.github.bumptech.glide:compiler:${versions.glide}",
 
+            leakcanaryDebug             : "com.squareup.leakcanary:leakcanary-android:$versions.leakcanary",
+            leakcanaryRelease           : "com.squareup.leakcanary:leaksentry:$versions.leakcanary",
     ]
 
 
